--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11314,3 +11314,21 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+.wakala{
+  color: white;
+  margin-left: 20px;
+}
+
+.wakala-button{
+  margin-left: 20px;
+}
+
+.wakala-a{
+  color: white;
+  text-decoration: none;
+}
+
+.wakala-a:hover{
+  color: white;
+}
