--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,7 @@
 		id="page-top">
 		<!-- Navigation-->
 		<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+			{% block header %}{% endblock %}
 			<div class="container">
 				<a class="navbar-brand" href="#page-top"></a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -96,123 +97,33 @@
 		</section>
 		<!-- Portfolio Grid-->
 		<section class="page-section bg-light" id="portfolio">
-			<div class="container">
-				<div class="text-center">
-					<h2 class="section-heading text-uppercase">Portfolio</h2>
-					<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-				</div>
-				<div class="row">
-					<div
-						class="col-lg-4 col-sm-6 mb-4">
-						<!-- Portfolio item 1-->
-						<div class="portfolio-item">
-							<a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-								<div class="portfolio-hover">
-									<div class="portfolio-hover-content">
-										<i class="fas fa-plus fa-3x"></i>
-									</div>
-								</div>
-								<img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..."/>
-							</a>
-							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">1ª Imagen</div>
-								<div class="portfolio-caption-subheading text-muted">Illustration</div>
-							</div>
-						</div>
-					</div>
-					<div
-						class="col-lg-4 col-sm-6 mb-4">
-						<!-- Portfolio item 2-->
-						<div class="portfolio-item">
-							<a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-								<div class="portfolio-hover">
-									<div class="portfolio-hover-content">
-										<i class="fas fa-plus fa-3x"></i>
-									</div>
-								</div>
-								<img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..."/>
-							</a>
-							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">2ª Imagen</div>
-								<div class="portfolio-caption-subheading text-muted">Graphic Design</div>
-							</div>
-						</div>
-					</div>
-					<div
-						class="col-lg-4 col-sm-6 mb-4">
-						<!-- Portfolio item 3-->
-						<div class="portfolio-item">
-							<a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-								<div class="portfolio-hover">
-									<div class="portfolio-hover-content">
-										<i class="fas fa-plus fa-3x"></i>
-									</div>
-								</div>
-								<img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..."/>
-							</a>
-							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">3º Imagen</div>
-								<div class="portfolio-caption-subheading text-muted">Identity</div>
-							</div>
-						</div>
-					</div>
-					<div
-						class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-						<!-- Portfolio item 4-->
-						<div class="portfolio-item">
-							<a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-								<div class="portfolio-hover">
-									<div class="portfolio-hover-content">
-										<i class="fas fa-plus fa-3x"></i>
-									</div>
-								</div>
-								<img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..."/>
-							</a>
-							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">4ª Imagen</div>
-								<div class="portfolio-caption-subheading text-muted">Branding</div>
-							</div>
-						</div>
-					</div>
-					<div
-						class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-						<!-- Portfolio item 5-->
-						<div class="portfolio-item">
-							<a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-								<div class="portfolio-hover">
-									<div class="portfolio-hover-content">
-										<i class="fas fa-plus fa-3x"></i>
-									</div>
-								</div>
-								<img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..."/>
-							</a>
-							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">5ª Imagen</div>
-								<div class="portfolio-caption-subheading text-muted">Website Design</div>
-							</div>
-						</div>
-					</div>
-					<div
-						class="col-lg-4 col-sm-6">
-						<!-- Portfolio item 6-->
-						<div class="portfolio-item">
-							<a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-								<div class="portfolio-hover">
-									<div class="portfolio-hover-content">
-										<i class="fas fa-plus fa-3x"></i>
-									</div>
-								</div>
-								<img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..."/>
-							</a>
-							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">6ª Imagen</div>
-								<div class="portfolio-caption-subheading text-muted">Photography</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase">Portfolio</h2>
+            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+        </div>
+        <div class="row">
+            {% for imagen in imagenes %}
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal{{ imagen.id }}">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <i class="fas fa-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="{{ asset('assets/img/portfolio/' ~ imagen.ruta) }}" alt="..."/>
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">{{ imagen.id }}ª Imagen</div>
+                            <div class="portfolio-caption-subheading text-muted">{{ imagen.categoria }}</div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 		<!-- About-->
 		<section class="page-section" id="about">
 			<div class="container">
@@ -445,220 +356,43 @@
 		</footer>
 		<!-- Portfolio Modals-->
 		<!-- Portfolio item 1 modal popup-->
-		<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal"/></div>
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-lg-8">
-								<div
-									class="modal-body">
-									<!-- Project details-->
-									<h2 class="text-uppercase">Proyecto Plantilla</h2>
-									<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-									<img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..."/>
-									<p>Imagen que controlaré en servidor</p>
-									<ul class="list-inline">
-										<li>
-											<strong>Client:</strong>
-											Threads
-										</li>
-										<li>
-											<strong>Category:</strong>
-											Illustration
-										</li>
-									</ul>
-									<button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-										<i class="fas fa-xmark me-1"></i>
-										Close Project
-									</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Portfolio item 2 modal popup-->
-		<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal"/></div>
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-lg-8">
-								<div
-									class="modal-body">
-									<!-- Project details-->
-									<h2 class="text-uppercase">Project Name</h2>
-									<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-									<img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..."/>
-									<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-									<ul class="list-inline">
-										<li>
-											<strong>Client:</strong>
-											Explore
-										</li>
-										<li>
-											<strong>Category:</strong>
-											Graphic Design
-										</li>
-									</ul>
-									<button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-										<i class="fas fa-xmark me-1"></i>
-										Close Project
-									</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Portfolio item 3 modal popup-->
-		<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal"/></div>
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-lg-8">
-								<div
-									class="modal-body">
-									<!-- Project details-->
-									<h2 class="text-uppercase">Project Name</h2>
-									<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-									<img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..."/>
-									<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-									<ul class="list-inline">
-										<li>
-											<strong>Client:</strong>
-											Finish
-										</li>
-										<li>
-											<strong>Category:</strong>
-											Identity
-										</li>
-									</ul>
-									<button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-										<i class="fas fa-xmark me-1"></i>
-										Close Project
-									</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Portfolio item 4 modal popup-->
-		<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal"/></div>
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-lg-8">
-								<div
-									class="modal-body">
-									<!-- Project details-->
-									<h2 class="text-uppercase">Project Name</h2>
-									<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-									<img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..."/>
-									<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-									<ul class="list-inline">
-										<li>
-											<strong>Client:</strong>
-											Lines
-										</li>
-										<li>
-											<strong>Category:</strong>
-											Branding
-										</li>
-									</ul>
-									<button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-										<i class="fas fa-xmark me-1"></i>
-										Close Project
-									</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Portfolio item 5 modal popup-->
-		<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal"/></div>
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-lg-8">
-								<div
-									class="modal-body">
-									<!-- Project details-->
-									<h2 class="text-uppercase">Project Name</h2>
-									<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-									<img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..."/>
-									<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-									<ul class="list-inline">
-										<li>
-											<strong>Client:</strong>
-											Southwest
-										</li>
-										<li>
-											<strong>Category:</strong>
-											Website Design
-										</li>
-									</ul>
-									<button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-										<i class="fas fa-xmark me-1"></i>
-										Close Project
-									</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Portfolio item 6 modal popup-->
-		<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal"/></div>
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-lg-8">
-								<div
-									class="modal-body">
-									<!-- Project details-->
-									<h2 class="text-uppercase">Project Name</h2>
-									<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-									<img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..."/>
-									<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-									<ul class="list-inline">
-										<li>
-											<strong>Client:</strong>
-											Window
-										</li>
-										<li>
-											<strong>Category:</strong>
-											Photography
-										</li>
-									</ul>
-									<button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-										<i class="fas fa-xmark me-1"></i>
-										Close Project
-									</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		{% for imagen in imagenes %}
+    <div class="portfolio-modal modal fade" id="portfolioModal{{ imagen.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-bs-dismiss="modal">
+                    <img src="assets/img/close-icon.svg" alt="Close modal"/>
+                </div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <h2 class="text-uppercase">{{ imagen.id }}ª Imagen</h2>
+                                <p class="item-intro text-muted">{{ imagen.nombre }}</p>
+                                <img class="img-fluid d-block mx-auto" src="{{ asset('assets/img/portfolio/' ~ imagen.ruta) }}" alt="..."/>
+                                <p>{{ imagen.descripcion }}</p>
+                                <ul class="list-inline">
+                                    <li>
+                                        <strong>Category:</strong>
+                                        {{ imagen.categoria }}
+                                    </li>
+                                </ul>
+                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                    <i class="fas fa-xmark me-1"></i>
+                                    Close Project
+                                </button>
+                                <a class="btn btn-primary btn-xl" href="image/edit/{{imagen.id}}">
+                                    Editar
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endfor %}
+
+		
 	</body>
 {% endblock %}
