--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,39 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
-
+{% block title %}Log in!
+{% endblock %}
+{% block background %}bg-dark
+{% endblock %}
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
-    {% if app.user %}
-		<div class="mb-3" style="float: right;">
-			Eres
-			{{ app.user.userIdentifier }}
-			<button class="btn btn-primary">
-				<a href="{{ path('app_logout') }}">Logout</a>
-			</button>
-		</div>
-	{% endif %}
+	<form method="post">
+		{% if error %}
+			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Logueate</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Contraseña</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+		{% if app.user %}
+			<div class="mb-3" style="float: right;">
+				Eres
+				{{ app.user.userIdentifier }}
+				<button class="btn btn-primary">
+					<a href="{{ path('app_logout') }}">Logout</a>
+				</button>
+			</div>
+		{% endif %}
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+		<h1 class="h3 mb-3 font-weight-normal text-primary">Logueate</h1>
+		<label class="text-light" for="inputEmail">Email</label>
+		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+		<label class="text-light" for="inputPassword">Contraseña</label>
+		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Entrar
-    </button>
-    ¿No tienes una cuenta?
+		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+		<button class="btn btn-lg btn-primary text-light" type="submit">
+			Entrar
+		</button>
+		<p class="text-light">¿No tienes una cuenta?</p>
 		<button class="btn btn-primary">
 			<a href="{{ path('app_register') }}" style="text-decoration: none; color: white;">Regístrarse</a>
 		</button>
-</form>
+	</form>
 {% endblock %}
