--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,8 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		{% block head %}
-			<title>
-				{% block title %}Plantilla
-				{% endblock %}
-			</title>
+			<title>{% block title %}Plantilla{% endblock %}</title>
 
 			{% block stylesheets %}
 				<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -45,7 +43,7 @@
 								<a class="nav-link" href="#portfolio">Portfolio</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#about">Sobre mí</a>
+								<a class="nav-link" href="#about">Sobre nosotros</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#team">Equipo</a>
@@ -60,7 +58,7 @@
 			<!-- Masthead-->
 			<header class="masthead">
 				<div class="container">
-					<div class="masthead-subheading">¡Bienvenido a mi estudio!</div>
+					<div class="masthead-subheading">¡Bienvenido a nuestro estudio!</div>
 					<div class="masthead-heading text-uppercase">Encantado de conocerte</div>
 					<a class="btn btn-primary btn-xl text-uppercase" href="#services">Cuéntame más</a>
 				</div>
@@ -142,76 +140,77 @@
 			<section class="page-section" id="about">
 				<div class="container">
 					<div class="text-center">
-					<h2 class="section-heading text-uppercase">Sobre nosotros</h2>
-					<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-					<ul class="timeline">
-						<li>
-							<div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..."/></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h4>2009-2011</h4>
-									<h4 class="subheading">Our Humble Beginnings</h4>
+						<h2 class="section-heading text-uppercase">Sobre nosotros</h2>
+						<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+						<ul class="timeline">
+							<li>
+								<div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..."/></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
+										<h4>2009-2011</h4>
+										<h4 class="subheading">Nuestros comienzos</h4>
+									</div>
+									<div class="timeline-body">
+										<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+									</div>
 								</div>
-								<div class="timeline-body">
-									<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+							</li>
+							<li class="timeline-inverted">
+								<div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..."/></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
+										<h4>March 2011</h4>
+										<h4 class="subheading">An Agency is Born</h4>
+									</div>
+									<div class="timeline-body">
+										<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+									</div>
 								</div>
-							</div>
-						</li>
-						<li class="timeline-inverted">
-							<div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..."/></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h4>March 2011</h4>
-									<h4 class="subheading">An Agency is Born</h4>
+							</li>
+							<li>
+								<div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..."/></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
+										<h4>December 2015</h4>
+										<h4 class="subheading">Transition to Full Service</h4>
+									</div>
+									<div class="timeline-body">
+										<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+									</div>
 								</div>
-								<div class="timeline-body">
-									<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+							</li>
+							<li class="timeline-inverted">
+								<div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..."/></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
+										<h4>July 2020</h4>
+										<h4 class="subheading">Phase Two Expansion</h4>
+									</div>
+									<div class="timeline-body">
+										<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+									</div>
 								</div>
-							</div>
-						</li>
-						<li>
-							<div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..."/></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h4>December 2015</h4>
-									<h4 class="subheading">Transition to Full Service</h4>
+							</li>
+							<li class="timeline-inverted">
+								<div class="timeline-image">
+									<h4>
+										Sé Parte
+										<br/>
+										De Nuestra
+										<br/>
+										Hístoria!
+									</h4>
 								</div>
-								<div class="timeline-body">
-									<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-								</div>
-							</div>
-						</li>
-						<li class="timeline-inverted">
-							<div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..."/></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h4>July 2020</h4>
-									<h4 class="subheading">Phase Two Expansion</h4>
-								</div>
-								<div class="timeline-body">
-									<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-								</div>
-							</div>
-						</li>
-						<li class="timeline-inverted">
-							<div class="timeline-image">
-								<h4>
-									Be Part
-									<br/>
-									Of Our
-									<br/>
-									Story!
-								</h4>
-							</div>
-						</li>
-					</ul>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</section>
 			<!-- Team-->
 			<section class="page-section bg-light" id="team">
 				<div class="container">
 					<div class="text-center">
-						<h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+						<h2 class="section-heading text-uppercase">Nuestro equipo</h2>
 						<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
 					</div>
 					<div class="row">
@@ -327,67 +326,67 @@
 
 					{{ form_end(form) }}
 				</div>
-				</section>
-				<!-- Footer-->
-				<footer class="footer py-4">
-					<div class="container">
-						<div class="row align-items-center">
-							<div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
-							<div class="col-lg-4 my-3 my-lg-0">
-								<a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter">
-									<i class="fab fa-twitter"></i>
-								</a>
-								<a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook">
-									<i class="fab fa-facebook-f"></i>
-								</a>
-								<a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn">
-									<i class="fab fa-linkedin-in"></i>
-								</a>
-							</div>
-							<div class="col-lg-4 text-lg-end">
-								<a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-								<a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-							</div>
+			</section>
+			<!-- Footer-->
+			<footer class="footer py-4">
+				<div class="container">
+					<div class="row align-items-center">
+						<div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+						<div class="col-lg-4 my-3 my-lg-0">
+							<a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter">
+								<i class="fab fa-twitter"></i>
+							</a>
+							<a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+							<a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn">
+								<i class="fab fa-linkedin-in"></i>
+							</a>
+						</div>
+						<div class="col-lg-4 text-lg-end">
+							<a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+							<a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
 						</div>
 					</div>
-				</footer>
-				<!-- Portfolio Modals--><!-- Portfolio item 1 modal popup-->
-				{% for imagen in imagenes %}
-					<div class="portfolio-modal modal fade" id="portfolioModal{{ imagen.id }}" tabindex="-1" role="dialog" aria-hidden="true">
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="close-modal" data-bs-dismiss="modal">
-									<img src="assets/img/close-icon.svg" alt="Close modal"/>
-								</div>
-								<div class="container">
-									<div class="row justify-content-center">
-										<div class="col-lg-8">
-											<div class="modal-body">
-												<h2 class="text-uppercase">{{ imagen.id }}ª Imagen</h2>
-												<p class="item-intro text-muted">{{ imagen.nombre }}</p>
-												<img class="img-fluid d-block mx-auto" src="{{ asset(imagen.ruta) }}" alt="..."/>
-												<p>{{ imagen.descripcion }}</p>
-												<ul class="list-inline">
-													<li>
-														<strong>Category:</strong>
-														{{ imagen.categoria }}
-													</li>
-												</ul>
-												<button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-													<i class="fas fa-xmark me-1"></i>
-													Close Project
-												</button>
-												<a class="btn btn-primary btn-xl" href="image/edit/{{imagen.id}}">
-													Editar
-												</a>
-											</div>
+				</div>
+			</footer>
+			<!-- Portfolio Modals--><!-- Portfolio item 1 modal popup-->
+			{% for imagen in imagenes %}
+				<div class="portfolio-modal modal fade" id="portfolioModal{{ imagen.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="close-modal" data-bs-dismiss="modal">
+								<img src="assets/img/close-icon.svg" alt="Close modal"/>
+							</div>
+							<div class="container">
+								<div class="row justify-content-center">
+									<div class="col-lg-8">
+										<div class="modal-body">
+											<h2 class="text-uppercase">{{ imagen.id }}ª Imagen</h2>
+											<p class="item-intro text-muted">{{ imagen.nombre }}</p>
+											<img class="img-fluid d-block mx-auto" src="{{ asset(imagen.ruta) }}" alt="..."/>
+											<p>{{ imagen.descripcion }}</p>
+											<ul class="list-inline">
+												<li>
+													<strong>Category:</strong>
+													{{ imagen.categoria }}
+												</li>
+											</ul>
+											<button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+												<i class="fas fa-xmark me-1"></i>
+												Close Project
+											</button>
+											<a class="btn btn-primary btn-xl" href="image/edit/{{imagen.id}}">
+											Editar
+											</a>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				{% endfor %}
+				</div>
+			{% endfor %}
 		{% endblock %}
 	</body>
 </html>
